syntax = "proto3";

package thumbnailer;;

option go_package = "./grpc";

message ThumbnailRequest {
    bytes content = 1;
    string extension = 2;
}

message ThumbnailResponse {
  bytes thumbnail = 1;
}

service ThumbnailService {
    rpc GenerateThumbnail(ThumbnailRequest) returns (ThumbnailResponse);
}